# demo-basin-server

./: .gitignore  Cargo.toml  Makefile  README.md  env.example  large.txt
src/: main.rs  server.rs
src/server/: get.rs  list.rs  routes.rs  set.rs  shared.rs  util.rs
